// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddTechnicalReq.vue renders props when passed 1`] = `
<div
  class="mx-auto outer-card v-card v-sheet theme--light"
>
  <div
    class="mx-auto v-card v-sheet theme--light"
  >
    <header
      class="bc-subtitle v-sheet v-sheet--tile theme--dark v-toolbar v-app-bar"
      style="height: 64px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <button
          aria-label="Back Button"
          class="v-btn v-btn--flat v-btn--icon v-btn--round theme--dark v-size--default"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-arrow-left theme--dark"
            />
          </span>
        </button>
         
        <div
          class="v-toolbar__title"
        >
          
        
      
        </div>
         
        <div
          class="spacer"
        />
      </div>
    </header>
     
    <form
      class="v-form pa-4 pt-6"
      novalidate="novalidate"
    >
      <div
        class="container"
      >
        <div
          class="row row--dense"
        >
          <div
            class="col-md-12 col-12"
          >
            <div
              class="pa-4 pt-6 mb-4 v-card v-sheet theme--light"
            >
              <div
                class="v-card__title headline bc-padding-left-0 text-capitalize"
              >
                
                
              
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
                
              
              </div>
            </div>
             
            <div
              class="pa-4 pt-6 v-card v-sheet theme--light"
            >
              <div
                class="bc-form-text"
                rules="v => !!v || 'This field is required',v => {
    if (v === '') {
      return true;
    } else {
      return /^(?:http(s)?:\\\\/\\\\/)[\\\\w.-]+(?:\\\\.[\\\\w\\\\.-]+)+[\\\\w\\\\-\\\\._~:/?#[\\\\]@!\\\\$&'\\\\(\\\\)\\\\*\\\\+,;=.]+$/.test(v) || ' must be valid URL';
    }
  },v => (v || '').length <= len || 'Invalid character length, max length ' + len"
              >
                <div
                  class="text-left my-1"
                >
                  
                </div>
                 
                <!---->
                 
                <div
                  class="v-input input theme--light v-text-field v-text-field--single-line v-text-field--solo v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend>
                          <span>
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <input
                          id="input-14"
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <span
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
               
              <div
                class="bc-form-text addUri"
                rules="v => !!v || 'This field is required',v => {
    if (v === '') {
      return true;
    } else {
      return /^(?:http(s)?:\\\\/\\\\/)[\\\\w.-]+(?:\\\\.[\\\\w\\\\.-]+)+[\\\\w\\\\-\\\\._~:/?#[\\\\]@!\\\\$&'\\\\(\\\\)\\\\*\\\\+,;=.]+$/.test(v) || ' must be valid URL';
    }
  }"
              >
                <div
                  class="text-left my-1"
                >
                  
                </div>
                 
                <!---->
                 
                <div
                  class="v-input input theme--light v-text-field v-text-field--single-line v-text-field--solo v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend>
                          <span>
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <input
                          id="input-18"
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <span
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
               
              <div
                class="v-card__title text-left bc-padding-left-0"
              >
                
                
              
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
                
              
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                <div
                  class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="height: auto;"
                    >
                      <div
                        aria-labelledby="input-21"
                        class="v-input--radio-group__input"
                        role="radiogroup"
                      >
                        <div
                          class="v-radio theme--light v-item--active"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <input
                              aria-checked="true"
                              id="input-22"
                              name="radio-21"
                              role="radio"
                              type="radio"
                              value="1"
                            />
                            <div
                              class="v-input--selection-controls__ripple primary--text"
                            />
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-radiobox-marked theme--light primary--text"
                            />
                          </div>
                          <label
                            class="v-label theme--light"
                            for="input-22"
                            style="left: 0px; position: relative;"
                          >
                            Simple JSON
                          </label>
                        </div>
                         
                        <div
                          class="small-hint radio-help"
                        >
                          
                        </div>
                         
                        <div
                          class="v-radio theme--light"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <input
                              aria-checked="false"
                              id="input-24"
                              name="radio-21"
                              role="radio"
                              type="radio"
                              value="2"
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-radiobox-blank theme--light"
                            />
                          </div>
                          <label
                            class="v-label theme--light"
                            for="input-24"
                            style="left: 0px; position: relative;"
                          >
                            Signed JWT
                          </label>
                        </div>
                         
                        <div
                          class="small-hint radio-help"
                        >
                          
                        </div>
                         
                        <!---->
                         
                        <div
                          class="v-radio theme--light"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <input
                              aria-checked="false"
                              id="input-26"
                              name="radio-21"
                              role="radio"
                              type="radio"
                              value="3"
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-radiobox-blank theme--light"
                            />
                          </div>
                          <label
                            class="v-label theme--light"
                            for="input-26"
                            style="left: 0px; position: relative;"
                          >
                            Secure JWT
                          </label>
                        </div>
                         
                        <div
                          class="small-hint radio-help"
                        >
                          
                        </div>
                      </div>
                    </div>
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
               
              <!---->
               
              <hr
                aria-orientation="horizontal"
                class="v-divider theme--light"
                role="separator"
              />
               
              <div
                class="v-card__actions"
              >
                <div
                  class="spacer"
                />
                 
                <button
                  aria-label="Back Button"
                  class="btn v-btn v-btn--contained theme--light v-size--default secondary-btn normal"
                  name="button"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    
                  
                
                  </span>
                </button>
                 
                <button
                  aria-disabled="true"
                  class="btn white--text submit-req ml-6 v-btn v-btn--depressed v-btn--disabled theme--light v-size--default primary normal disabled"
                  depressed=""
                  disabled="disabled"
                  name="button"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    
                  
                
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`AddTechnicalReq.vue renders props when passed 2`] = `
<div
  class="mx-auto outer-card v-card v-sheet theme--light"
>
  <div
    class="mx-auto v-card v-sheet theme--light"
  >
    <header
      class="bc-subtitle v-sheet v-sheet--tile theme--dark v-toolbar v-app-bar"
      style="height: 64px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <button
          aria-label="Back Button"
          class="v-btn v-btn--flat v-btn--icon v-btn--round theme--dark v-size--default"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-arrow-left theme--dark"
            />
          </span>
        </button>
         
        <div
          class="v-toolbar__title"
        >
          
        
      
        </div>
         
        <div
          class="spacer"
        />
      </div>
    </header>
     
    <form
      class="v-form pa-4 pt-6"
      novalidate="novalidate"
    >
      <div
        class="container"
      >
        <div
          class="row row--dense"
        >
          <div
            class="col-md-12 col-12"
          >
            <div
              class="pa-4 pt-6 mb-4 v-card v-sheet theme--light"
            >
              <div
                class="v-card__title headline bc-padding-left-0 text-capitalize"
              >
                
                
              
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
                
              
              </div>
            </div>
             
            <div
              class="pa-4 pt-6 v-card v-sheet theme--light"
            >
              <div
                class="bc-form-text"
                rules="v => !!v || 'This field is required',v => {
    if (v === '') {
      return true;
    } else {
      return /^(?:http(s)?:\\\\/\\\\/)[\\\\w.-]+(?:\\\\.[\\\\w\\\\.-]+)+[\\\\w\\\\-\\\\._~:/?#[\\\\]@!\\\\$&'\\\\(\\\\)\\\\*\\\\+,;=.]+$/.test(v) || ' must be valid URL';
    }
  },v => (v || '').length <= len || 'Invalid character length, max length ' + len"
              >
                <div
                  class="text-left my-1"
                >
                  
                </div>
                 
                <!---->
                 
                <div
                  class="v-input input theme--light v-text-field v-text-field--single-line v-text-field--solo v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend>
                          <span>
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <input
                          id="input-47"
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <span
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
               
              <div
                class="bc-form-text addUri"
                rules="v => !!v || 'This field is required',v => {
    if (v === '') {
      return true;
    } else {
      return /^(?:http(s)?:\\\\/\\\\/)[\\\\w.-]+(?:\\\\.[\\\\w\\\\.-]+)+[\\\\w\\\\-\\\\._~:/?#[\\\\]@!\\\\$&'\\\\(\\\\)\\\\*\\\\+,;=.]+$/.test(v) || ' must be valid URL';
    }
  }"
              >
                <div
                  class="text-left my-1"
                >
                  
                </div>
                 
                <!---->
                 
                <div
                  class="v-input input theme--light v-text-field v-text-field--single-line v-text-field--solo v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend>
                          <span>
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <input
                          id="input-51"
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <span
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
               
              <div
                class="v-card__title text-left bc-padding-left-0"
              >
                
                
              
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
                
              
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                <div
                  class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="height: auto;"
                    >
                      <div
                        aria-labelledby="input-54"
                        class="v-input--radio-group__input"
                        role="radiogroup"
                      >
                        <div
                          class="v-radio theme--light v-item--active"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <input
                              aria-checked="true"
                              id="input-55"
                              name="radio-54"
                              role="radio"
                              type="radio"
                              value="1"
                            />
                            <div
                              class="v-input--selection-controls__ripple primary--text"
                            />
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-radiobox-marked theme--light primary--text"
                            />
                          </div>
                          <label
                            class="v-label theme--light"
                            for="input-55"
                            style="left: 0px; position: relative;"
                          >
                            Simple JSON
                          </label>
                        </div>
                         
                        <div
                          class="small-hint radio-help"
                        >
                          
                        </div>
                         
                        <div
                          class="v-radio theme--light"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <input
                              aria-checked="false"
                              id="input-57"
                              name="radio-54"
                              role="radio"
                              type="radio"
                              value="2"
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-radiobox-blank theme--light"
                            />
                          </div>
                          <label
                            class="v-label theme--light"
                            for="input-57"
                            style="left: 0px; position: relative;"
                          >
                            Signed JWT
                          </label>
                        </div>
                         
                        <div
                          class="small-hint radio-help"
                        >
                          
                        </div>
                         
                        <!---->
                         
                        <div
                          class="v-radio theme--light"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <input
                              aria-checked="false"
                              id="input-59"
                              name="radio-54"
                              role="radio"
                              type="radio"
                              value="3"
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-radiobox-blank theme--light"
                            />
                          </div>
                          <label
                            class="v-label theme--light"
                            for="input-59"
                            style="left: 0px; position: relative;"
                          >
                            Secure JWT
                          </label>
                        </div>
                         
                        <div
                          class="small-hint radio-help"
                        >
                          
                        </div>
                      </div>
                    </div>
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
               
              <!---->
               
              <hr
                aria-orientation="horizontal"
                class="v-divider theme--light"
                role="separator"
              />
               
              <div
                class="v-card__actions"
              >
                <div
                  class="spacer"
                />
                 
                <button
                  aria-label="Back Button"
                  class="btn v-btn v-btn--contained theme--light v-size--default secondary-btn normal"
                  name="button"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    
                  
                
                  </span>
                </button>
                 
                <button
                  aria-disabled="true"
                  class="btn white--text submit-req ml-6 v-btn v-btn--depressed v-btn--disabled theme--light v-size--default primary normal disabled"
                  depressed=""
                  disabled="disabled"
                  name="button"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    
                  
                
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`AddTechnicalReq.vue submit form on onlick  1`] = `
<div
  class="mx-auto outer-card v-card v-sheet theme--light"
>
  <div
    class="mx-auto v-card v-sheet theme--light"
  >
    <header
      class="bc-subtitle v-sheet v-sheet--tile theme--dark v-toolbar v-app-bar"
      style="height: 64px; margin-top: 0px; transform: translateY(0px); left: 0px; right: 0px;"
    >
      <div
        class="v-toolbar__content"
        style="height: 64px;"
      >
        <button
          aria-label="Back Button"
          class="v-btn v-btn--flat v-btn--icon v-btn--round theme--dark v-size--default"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate mdi mdi-arrow-left theme--dark"
            />
          </span>
        </button>
         
        <div
          class="v-toolbar__title"
        >
          
        
      
        </div>
         
        <div
          class="spacer"
        />
      </div>
    </header>
     
    <form
      class="v-form pa-4 pt-6"
      novalidate="novalidate"
    >
      <div
        class="container"
      >
        <div
          class="row row--dense"
        >
          <div
            class="col-md-12 col-12"
          >
            <div
              class="pa-4 pt-6 mb-4 v-card v-sheet theme--light"
            >
              <div
                class="v-card__title headline bc-padding-left-0 text-capitalize"
              >
                
                
              
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
                
              
              </div>
            </div>
             
            <div
              class="pa-4 pt-6 v-card v-sheet theme--light"
            >
              <div
                class="bc-form-text"
                rules="v => !!v || 'This field is required',v => {
    if (v === '') {
      return true;
    } else {
      return /^(?:http(s)?:\\\\/\\\\/)[\\\\w.-]+(?:\\\\.[\\\\w\\\\.-]+)+[\\\\w\\\\-\\\\._~:/?#[\\\\]@!\\\\$&'\\\\(\\\\)\\\\*\\\\+,;=.]+$/.test(v) || ' must be valid URL';
    }
  },v => (v || '').length <= len || 'Invalid character length, max length ' + len"
              >
                <div
                  class="text-left my-1"
                >
                  
                </div>
                 
                <!---->
                 
                <div
                  class="v-input input theme--light v-text-field v-text-field--single-line v-text-field--solo v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend>
                          <span>
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <input
                          id="input-80"
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <span
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
               
              <div
                class="bc-form-text addUri"
                rules="v => !!v || 'This field is required',v => {
    if (v === '') {
      return true;
    } else {
      return /^(?:http(s)?:\\\\/\\\\/)[\\\\w.-]+(?:\\\\.[\\\\w\\\\.-]+)+[\\\\w\\\\-\\\\._~:/?#[\\\\]@!\\\\$&'\\\\(\\\\)\\\\*\\\\+,;=.]+$/.test(v) || ' must be valid URL';
    }
  }"
              >
                <div
                  class="text-left my-1"
                >
                  
                </div>
                 
                <!---->
                 
                <div
                  class="v-input input theme--light v-text-field v-text-field--single-line v-text-field--solo v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend>
                          <span>
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <input
                          id="input-84"
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <span
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
               
              <div
                class="v-card__title text-left bc-padding-left-0"
              >
                
                
              
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                
                
              
              </div>
               
              <div
                class="v-card__subtitle text-left bc-padding-left-0"
              >
                <div
                  class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="height: auto;"
                    >
                      <div
                        aria-labelledby="input-87"
                        class="v-input--radio-group__input"
                        role="radiogroup"
                      >
                        <div
                          class="v-radio theme--light v-item--active"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <input
                              aria-checked="true"
                              id="input-88"
                              name="radio-87"
                              role="radio"
                              type="radio"
                              value="1"
                            />
                            <div
                              class="v-input--selection-controls__ripple primary--text"
                            />
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-radiobox-marked theme--light primary--text"
                            />
                          </div>
                          <label
                            class="v-label theme--light"
                            for="input-88"
                            style="left: 0px; position: relative;"
                          >
                            Simple JSON
                          </label>
                        </div>
                         
                        <div
                          class="small-hint radio-help"
                        >
                          
                        </div>
                         
                        <div
                          class="v-radio theme--light"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <input
                              aria-checked="false"
                              id="input-90"
                              name="radio-87"
                              role="radio"
                              type="radio"
                              value="2"
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-radiobox-blank theme--light"
                            />
                          </div>
                          <label
                            class="v-label theme--light"
                            for="input-90"
                            style="left: 0px; position: relative;"
                          >
                            Signed JWT
                          </label>
                        </div>
                         
                        <div
                          class="small-hint radio-help"
                        >
                          
                        </div>
                         
                        <!---->
                         
                        <div
                          class="v-radio theme--light"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <input
                              aria-checked="false"
                              id="input-92"
                              name="radio-87"
                              role="radio"
                              type="radio"
                              value="3"
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-radiobox-blank theme--light"
                            />
                          </div>
                          <label
                            class="v-label theme--light"
                            for="input-92"
                            style="left: 0px; position: relative;"
                          >
                            Secure JWT
                          </label>
                        </div>
                         
                        <div
                          class="small-hint radio-help"
                        >
                          
                        </div>
                      </div>
                    </div>
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
               
              <!---->
               
              <hr
                aria-orientation="horizontal"
                class="v-divider theme--light"
                role="separator"
              />
               
              <div
                class="v-card__actions"
              >
                <div
                  class="spacer"
                />
                 
                <button
                  aria-label="Back Button"
                  class="btn v-btn v-btn--contained theme--light v-size--default secondary-btn normal"
                  name="button"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    
                  
                
                  </span>
                </button>
                 
                <button
                  aria-disabled="true"
                  class="btn white--text submit-req ml-6 v-btn v-btn--depressed v-btn--disabled theme--light v-size--default primary normal disabled"
                  depressed=""
                  disabled="disabled"
                  name="button"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    
                  
                
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
